Using Remove Single Override breaks file loading (crash) #70789

Closed
opened 2019-10-13 17:02:07 +02:00 by Alexander Gavrilov · 3 comments

Blender Version

Broken: 2.81 95f020c853, master

Short description of error

Using the Remove Single Override context menu option on an array property to remove overrides from 'unneeded' components and then saving creates a file that crashes on load.

Exact steps for others to reproduce the error

Link in a rig, override it, move a bone, use Remove Single Override on one or two of the location channels.

Rig for linking: test-overrides-rig-lib.blend

Linked with override on all location channels: test-overrides-rig-use1.blend

Linked with override on just two location channels (crashes on load): test-overrides-rig-use2.blend

The code crashes while trying to index the array property as a collection; in a debug build this triggers an assert.

**Blender Version** Broken: 2.81 95f020c853d6, master **Short description of error** Using the *Remove Single Override* context menu option on an array property to remove overrides from 'unneeded' components and then saving creates a file that crashes on load. **Exact steps for others to reproduce the error** Link in a rig, override it, move a bone, use *Remove Single Override* on one or two of the location channels. Rig for linking: [test-overrides-rig-lib.blend](https://archive.blender.org/developer/F7813267/test-overrides-rig-lib.blend) Linked with override on all location channels: [test-overrides-rig-use1.blend](https://archive.blender.org/developer/F7813269/test-overrides-rig-use1.blend) Linked with override on just two location channels (crashes on load): [test-overrides-rig-use2.blend](https://archive.blender.org/developer/F7813268/test-overrides-rig-use2.blend) The code crashes while trying to index the array property as a collection; in a debug build this triggers an assert.
Author
Member

Added subscriber: @angavrilov

Added subscriber: @angavrilov
Bastien Montagne was assigned by Alexander Gavrilov 2019-10-13 17:04:06 +02:00

This issue was referenced by 76be5b5bf5

This issue was referenced by 76be5b5bf5c830f8a3a3640fcf439bdca3a9aa89

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70789
No description provided.