Fix T70789: Using Remove Single Override breaks file loading (crash).

We only need to refine rna pointer for actual collection properties,
other arrays we handle directly the the appy callback.